@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: term.c,v 1.75 2004/05/24 15:44:12 mikulik Exp $"); }
+static char *RCSid() { return RCSid("$Id: term.c,v 1.76 2004/07/01 17:10:08 broeker Exp $"); }
 #endif
 
 /* GNUPLOT - term.c */
@@ -2244,6 +2244,14 @@ enhanced_recursion(
 		for (e=escape; *e; e++) {
 		    (term->enhanced_writec)(*e);
 		}
+		break;
+	    } else if (term->flags & TERM_IS_POSTSCRIPT) {
+		/* Shigeharu TAKENO  Aug 2004 - Needed in order for shift-JIS encoding to work */
+		/* If this change causes problems then we need a separate flag for shift-JIS   */
+		/* and certain other 8-bit character sets.                                     */
+		(term->enhanced_open)(fontname, fontsize, base, widthflag, showflag, overprint);
+		(term->enhanced_writec)('\\');
+		(term->enhanced_writec)('\\');
 		break;
 	    }
 	    ++p;
